--- a/main.html
+++ b/main.html
@@ -114,20 +114,20 @@
         </div>
 
         <div class="fot2">
-          <p>Product</p>
+          <p class="Prod">Product</p>
           <div class="tec">
-          <p>Download</p>
-          <p>Nitro</p>
-          <p>Status</p>
+          <p class="down">Download</p>
+          <a href="" class="Nitro"> <p>Nitro</p></a>
+          <p class="status">Status</p>
         </div>
         </div>
         <div class="fot3">
           <p>Company</p>
           <div class="tec">
-            <p>About</p>
-            <p>Jobs</p>
-            <p>Branding</p>
-            <p>Newsroom</p>
+            <p class="abo">About</p>
+            <p class="job">Jobs</p>
+            <p class="brand">Branding</p>
+            <p class="new">Newsroom</p>
 
           </div>
         </div>
@@ -135,26 +135,26 @@
         <div class="fot4">
           <p>Resources</p>
           <div class="tec">
-            <p>College</p>
-            <p>Support</p>
-            <p>Safety</p>
-            <p>Blog</p>
-            <p>Feedback</p>
-            <p>Developers</p>
-            <p>StreamKit</p>
+            <p class="col">College</p>
+            <p class="su">Support</p>
+            <p class="sa">Safety</p>
+            <p class="b">Blog</p>
+            <p class="f">Feedback</p>
+            <p class="d">Developers</p>
+            <p class="s">StreamKit</p>
 
           </div>
         </div>
         <div class="fot5">
           <p>Policies</p>
           <div class="tec">
-            <p>Terms</p>
-            <p>Privacy</p>
-            <p>Cookie Settings</p>
-            <p>Guidelines</p>
-            <p>Acknowledgemets</p>
-            <p>Licenses</p>
-            <p>Moderation</p>
+            <p class="t">Terms</p>
+            <p class="p">Privacy</p>
+            <p class="c">Cookie Settings</p>
+            <p class="g">Guidelines</p>
+            <p class="A">Acknowledgemets</p>
+            <p class="L">Licenses</p>
+            <p class="M">Moderation</p>
 
           </div>
         </div>
