--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
         <button class="container-button">
              <a href="https://discord.com/channels/@me" class="container-button-discord"> 
                 <ul>
-                    <li class="Download">Download for Windows</li>
+                    <li class="Downloader">Download for Windows</li>
                 </ul>
             
              </a></button>
