i added a lot of code

--- a/main.html
+++ b/main.html
@@ -14,10 +14,10 @@
         
   <nav class="container-head">
     <nav class="img-logo">
-       <div class="discord-los"> <a href="#" class="discord.log"> <img src="img/discord_full_logo_white_RGB.svg" alt="discord-logo" class="discord-logo"></a></div>
+       <div class="discord-los"> <a href="main.html" class="discord.log"> <img src="img/discord_full_logo_white_RGB.svg" alt="discord-logo" class="discord-logo"></a></div>
         <div class="links">
-            <div class="nav1"><a href="#"><p>Download</p></a></div>
-            <div class="nav2"><a href="#"><p>Nitro</p></a></div>
+            <div class="nav1"><a href="download.html"><p>Download</p></a></div>
+            <div class="nav2"><a href="nitro.html"><p>Nitro</p></a></div>
             <div class="nav3"><a href="#"><p>Discover</p></a></div>
             <div class="nav4"><a href="#"><p>Safety</p></a></div>
             <div class="nav5"><a href="#"><p>Support</p></a></div>
@@ -116,8 +116,8 @@
         <div class="fot2">
           <p class="Prod">Product</p>
           <div class="tec">
-          <p class="down">Download</p>
-          <a href="" class="Nitro"> <p>Nitro</p></a>
+           <a href="download.html" class="down"><p >Download</p></a>
+          <a href="nitro.html" class="Nitro"> <p>Nitro</p></a>
           <p class="status">Status</p>
         </div>
         </div>
